# VINS-Course

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
config/: MH_05_cam0.txt  MH_05_imu0.txt  euroc_config.yaml
include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  feature_tracker_parameters.h  parameters.h
include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  eigen_types.h  imu_integration.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
include/initial/: initial_alignment.h  initial_ex_rotation.h  solve_5pts.h
src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  feature_tracker_parameters.cpp  parameters.cpp
src/backend/: edge.cc  edge_imu.cc  edge_prior.cpp  edge_reprojection.cc  imu_integration.cc  loss_function.cc  problem.cc  vertex.cc  vertex_pose.cc
src/camera_models/camera_models/: PinholeCamera.cc
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp
test/: CurveFitting.cpp  run_euroc.cpp
